--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /venv/
 gcam.log
+lib_sharpness_key_3.jpg
+.gitignore
+lib_sharpness_key_-3.jpg
+lib_sharpness_key_-0.296875.jpg
+lib_sharpness_key_-0.96875.jpg
+lib_sharpness_key_0.96875.jpg
+lib_sharpness_key_0.328125.jpg
