теперь используется подставной конфиг

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ lib_sharpness_key_-0.296875.jpg
 lib_sharpness_key_-0.96875.jpg
 lib_sharpness_key_0.96875.jpg
 lib_sharpness_key_0.328125.jpg
+*.jpg
+*riv*.xml
+8.2riv.xml
