--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ coords.py
 6.png
 7.png
 __pycache__/gcamconftester.cpython-39.pyc
+extract_cct.py
+com.qti.tuned.j20c_ofilm_imx682_wide_global.bin
