тест перебора сст из системных либ

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ coords.py
 __pycache__/gcamconftester.cpython-39.pyc
 extract_cct.py
 com.qti.tuned.j20c_ofilm_imx682_wide_global.bin
+__pycache__/libextract.cpython-39.pyc
